# PY-projects

chatgpt_proxy/: config.py  db.py  gemini_client.py  index.html  main.py  pyproject.toml  requests.db
rate_limiter/: docker-compose.yaml  main.py  pyproject.toml
url_shortener/: docker-compose.yaml  index.html  pyproject.toml  test.db
url_shortener/src/: exceptions.py  main.py  service.py  shortener.py
url_shortener/src/database/: crud.py  models.py
url_shortener/tests/: conftest.py  test_api.py  test_service.py
